# compare-ini

./: .gitlab-ci.yml  .travis.yml  CHANGELOG.md  CMakeLists.txt  Compare.cpp  Compare.hpp  EntryNotFoundException.cpp  EntryNotFoundException.hpp  Ini.cpp  Ini.hpp  IniSection.cpp  IniSection.hpp  README  README.md  StringFunctions.cpp  StringFunctions.hpp  TODO  compare-ini.cbp  main.cpp
.github/workflows/: alpine.yml  ci.yml  clang.yml  gcc.yml  msys2.yml
documentation/: TODO.md  msys2-build.md  third-party.md
src/: CMakeLists.txt  Compare.cpp  Compare.hpp  EntryNotFoundException.cpp  EntryNotFoundException.hpp  Ini.cpp  Ini.hpp  IniSection.cpp  IniSection.hpp  StringFunctions.hpp  compare-ini.cbp  main.cpp
tests/: CMakeLists.txt  EntryNotFoundException.cpp  Ini.cpp  IniSection.cpp  StringFunctions.cpp  component_tests.cbp  locate_catch.hpp  main.cpp  parameter-misuse.cmd  parameter-misuse.sh
